--- a/views/comment.ejs
+++ b/views/comment.ejs
@@ -2,7 +2,7 @@
 
 <% for(var i = 0;i<Comments.length;i++){ %>
     
-    <h3><%= Comments[i].name%>  <%= Comments[i].rollNo%></h3>
+    <h4><b> # <%= Comments[i].name%>  <%= Comments[i].rollNo%></b></h4>
     <p>
         <%= Comments[i].content %>
     </p>
