--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,10 +1,46 @@
-
 <%- include("partials/header"); -%>
-<h1> Lets Work on <b>Linked List</b> this week </h1>
+<br>
+<h2 style="display : inline"> Lets Work on <h1 style="display : inline"><b>Linked List</b></h1><h2 style="display : inline"> this week </h2></h2>
+<br>
+<br>
+
+<section id="testimonials">
+
+  <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <h2 class="testimonial-text"><b>Code</b> Never Lies, <b>Comments</b> Sometimes Do</h2>
+      </div>
+      <div class="carousel-item">
+        <h2><b>Difficult</b> Roads Leads to beautiful <b>Destinations</b></h2>
+      </div>
+
+    </div>
+  </div>
+</section>
+<br>
+<h3> Updates : </h3>
+<br>
+<section id="testimonial">
+
+  <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <p>Website is under maintainence! Updates are on the way!</p>
+      </div>
+      <div class="carousel-item">
+        <p>This Week's questions are uploaded kindly check</p>
+      </div>
+
+    </div>
+  </div>
+</section>
+<br>
+<hr>
 
 <% var prev = -1 %>
-<h2>Questions : </h2>
-<hr>
+<h2 id="quuu">Questions : </h2>
+
 <% for(var i = 0;i<Questions.length;i++){ %>
   <% if(Questions[i].state!=0){ %>
     <% continue %>
