--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -10,26 +10,24 @@ body{
 }
 
 h3{
-  font-weight :bold;
+  font-weight : bold;
 }
 .navbar {
-    padding-top: 15px;
-    padding-bottom: 15px;
-    border: 0;
-    border-radius: 0;
-    margin-bottom: 0;
-    font-size: 12px;
-    letter-spacing: 5px;
-    background-color : #5F4B8BFF;
+	text-align: center;
+  position : fixed;
+  top : 0;
+  width: 100%;
+	height: 60px;
+  background-color : #5F4B8BFF;
 }
 .navbar-nav  li a:hover {
     color: #000000 !important;
 }
 
-.tempNav{
+/* .tempNav{
   display : flex;
   align-items: right;
-}
+} */
 
 .nav-item{
   padding: 0 40px;
